--- a/templates/mixins/room_card.html
+++ b/templates/mixins/room_card.html
@@ -1,7 +1,7 @@
 <div class="w-1/4 mb-10 px-2 overflow-hidden">
     <a href="{% url 'rooms:detail' room.pk %}">
         <div class="w-full h-64 bg-cover bg-center rounded-lg mb-2 " style="background-image: url({{room.first_photo}});">
-            <img class="card-img-top" src="https://consejosdecancun.com/wp-content/uploads/2018/04/hotel-dicas-cancun.jpg">
+            <img class="card-img-top" src="https://image-tc.galaxy.tf/wijpeg-cnoz375etqfsmivjy3qca0ji0/1555944918-5cbdd5d689fae-thumb.jpg">
         </div>
         <div class="flex justify-between mb-2 truncate">
             <div class="w-4/5 overflow-hidden flex">
